@@ -128,6 +128,12 @@ Display OS/physical indexes of all objects, with prefix "P#".
 By default, both logical and physical/OS indexes are displayed for PUs and NUMA nodes,
 logical only for cores, dies and packages, and no index for other types.
 .TP
+\fB\-\-logical\-index\-prefix\fR <prefix>
+Replace " L#" with the given prefix for logical indexes.
+.TP
+\fB\-\-os\-index\-prefix\fR <prefix>
+Replace " P#" with the given prefix for physical/OS indexes.
+.TP
 \fB\-c\fR \fB\-\-cpuset\fR
 Display the cpuset of each object.
 .TP
